--- a/THANKS
+++ b/THANKS
@@ -4,6 +4,8 @@ Aeroliners HD (https://www.youtube.com/watch?v=W5Z-d1Zx02o) for kindly allowing 
 
 D-ECHO Thanks for some animations in the Oh-Panel and New Effects.
 
+omega13a for most of the liveries
+
 ACJZA Thanks for some 3d models.
 
 David Culp (FDM-2011)
@@ -19,8 +21,6 @@ pakistan-1 Thanks For Fixes in the liveries.
 Kaito Thanks for the help of mapping and other things. 
 
 CaptB Thanks for new animations in the overhead. 
-
-Omega13a Thanks for the new liveries.
 
 Diego Kzañaz Thanks for the new Mexican liveries, etc. 
  
