--- a/THANKS
+++ b/THANKS
@@ -1,8 +1,6 @@
 Thanks to:
 
-Aeroliners HD (https://www.youtube.com/watch?v=W5Z-d1Zx02o) for kindly allowing us to use GPWS sounds for the 737-800 and release them under the GNU GPL license.
-
-D-ECHO Thanks for some animations in the Oh-Panel and New Effects.
+D-ECHO Thanks for some animations in the Oh-Panel and 3D improvements.
 
 omega13a for most of the liveries
 
